<resources>
    <string name="app_name">ContactsManager</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_contact_description">ContactDescription</string>
    <string name="title_activity_add_contact">AddContact</string>
    <string name="noResults">No contacts</string>
    <string name="labelId">Id</string>
    <string name="fill_id">Fill with the id</string>
    <string name="labelName">Name</string>
    <string name="fill_name">Fill with name</string>
    <string name="labelPhone">Phone</string>
    <string name="fill_phone">Fill with phone</string>
    <string name="labelLocation">Location</string>
    <string name="take_photo">Take photo</string>
    <string name="choose_from_gallery">Choose from gallery</string>
    <string name="delete">Delete photo</string>
    <string name="title_option">Select option</string>
    <string name="noName">Please fill the field of name</string>
</resources>
