<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.ricardogarcia.contactsmanager.AddContact"
    tools:showIn="@layout/activity_add_contact">

    <TableLayout
        android:id="@+id/table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*">
        <TableRow>
            <TextView
                android:id="@+id/labelId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/labelId"
                android:textSize="@dimen/labelSize"
                android:textStyle="bold"
                />
            <EditText
                android:id="@+id/textId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/fill_id"/>
        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/labelName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/labelName"
                android:textSize="@dimen/labelSize"
                android:textStyle="bold"
                />
            <EditText
                android:id="@+id/textName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/fill_name"/>
        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/labelPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/labelPhone"
                android:textSize="@dimen/labelSize"
                android:textStyle="bold"
                />
            <EditText
                android:id="@+id/textPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/fill_phone"/>
        </TableRow>
    </TableLayout>

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="@dimen/image_height"
        android:layout_below="@+id/table"
        android:clickable="true"
        android:layout_centerHorizontal="true"
        android:onClick="addPhoto"
        android:src="@mipmap/camera_ic"/>

</RelativeLayout>
